<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recognition">

    <fragment
        android:id="@+id/nav_recognition"
        android:name="com.ictis.neos.ui.recognition.RecognitionFragment"
        android:label="@string/menu_recognition"
        tools:layout="@layout/fragment_recognition" />

    <fragment
        android:id="@+id/nav_training"
        android:name="com.ictis.neos.ui.training.TrainingFragment"
        android:label="@string/menu_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ictis.neos.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>